[package]
name = "zyre-sys"
version = "0.1.0"
description = "Low-level bindings for the Zyre library."
authors = ["Schoonology <michael.r.schoonmaker@gmail.com>"]
repository = "https://github.com/Schoonology/rust-zyre-sys"
keywords = ["zeromq", "ffi"]
categories = ["external-ffi-bindings"]
readme = "README.md"
license = "MIT"
build = "build.rs"

[build-dependencies]
bindgen = "0.20.0"
